refactored the pay functiosn and featurize event to use go routene to schedule the unfeaturization of the event and refactored the swagger
