# cmd/api/docs/swagger.json
@@ -969,7 +969,7 @@
                     {
                         "type": "integer",
                         "description": "Organizatiion_id: ",
-                        "name": "Organizatiion_id",
+                        "name": "Organization_id",
                         "in": "query",
                         "required": true
                     }
@@ -1299,6 +1299,11 @@
         },
         "/organization/event/promote": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -1309,9 +1314,16 @@
                 "operationId": "promote event",
                 "parameters": [
                     {
-                        "type": "string",
+                        "type": "integer",
                         "description": "Event_id :",
                         "name": "Event_id",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Organization_id :",
+                        "name": "Organization_id",
                         "in": "query",
                         "required": true
                     },
@@ -1372,7 +1384,7 @@
                     {
                         "type": "integer",
                         "description": "Organizatiion_id: ",
-                        "name": "Organizatiion_id",
+                        "name": "Organization_id",
                         "in": "query",
                         "required": true
                     },
@@ -2565,7 +2577,6 @@
                 "email",
                 "first_name",
                 "last_name",
-                "password",
                 "phonenumber",
                 "user_name"
             ],
@@ -2585,7 +2596,7 @@
                 },
                 "password": {
                     "type": "string",
-                    "maxLength": 20
+                    "maxLength": 255
                 },
                 "phonenumber": {
                     "type": "string",
